# lz4

./: .gitignore
cmake_unofficial/: CMakeLists.txt  liblz4.def  version.rc.cmakein
lib/: lz4.h  lz4hc.h
